updated with correct info

--- a/check_list.html
+++ b/check_list.html
@@ -27,10 +27,6 @@
       <li><a href="hand_wash.html"><h6>Hand Washing!</h6></a></li>
     </ul>
   </div>
-      <ul class="nav navbar-nav">
-        <li><a href="login_signup.html"><h6>Sign up!</h6></a></li>
-        <li><a href="login_signup.html"><h6>Login!</h6></a></li>
-      </ul>
 
     </nav>
 
@@ -47,13 +43,13 @@
     </div>
     <h3>~Mask</h3>
     <br>
-    <h3>~Gloves</h3>
+    <h3>~Get Vaccinated</h3>
     <br>
     <h3>~Hand Sanitizer</h3>
     <br>
     <h3>~Clorox Wipes</h3>
     <br>
     <h4>For more information vist: </h4>
-    <p><a href="https://www.cdc.gov/coronavirus/2019-ncov/daily-life-coping/going-out.html">https://www.cdc.gov/coronavirus/2019-ncov/daily-life-coping/going-out.html</a></p>
+    <p><a href="https://acphd.org/communicable-disease/protect-yourself/">https://acphd.org/communicable-disease/protect-yourself/</a></p>
 </body>
 </html>
