--- a/home.html
+++ b/home.html
@@ -25,14 +25,10 @@
     </ul>
     <ul class="nav navbar-nav">
       <li><a href="check_list.html"><h6>Check List!</h6></a></li>
-      <li><a href="location.html"><h6>Covid-19 Tracker!</h6></a></li>
+      <li><a href="location.html"><h6>More Info!</h6></a></li>
       <li><a href="hand_wash.html"><h6>Hand Washing!</h6></a></li>
     </ul>
   </div>
-      <ul class="nav navbar-nav">
-        <li><a href="login_signup.html"><h6>Sign up!</h6></a></li>
-        <li><a href="login_signup.html"><h6>Login!</h6></a></li>
-      </ul>
 
     </nav>
 
@@ -40,19 +36,19 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/question-and-answers-hub/q-a-detail/q-a-on-covid-19-and-masks">  <img class="d-block w-100" src="https://media1.giphy.com/media/H62aSApQGHPUr0egL5/source.gif" width="200" height="600" alt="First slide"></a>
+      <a href="https://www.cdc.gov/respiratory-viruses/prevention/masks.html#:~:text=Wearing%20a%20mask%20can%20help,offer%20different%20levels%20of%20protection.">  <img class="d-block w-100" src="https://media1.giphy.com/media/H62aSApQGHPUr0egL5/source.gif" width="200" height="600" alt="First slide"></a>
       <div class="carousel-caption d-none d-md-block">
       <p>Wear A Mask</p>
       </div>
     </div>
     <div class="carousel-item">
-      <a href="https://www.cdc.gov/handwashing/when-how-handwashing.html#:~:text=Washing%20hands%20can%20keep%20you,and%20drinks%20with%20unwashed%20hands">  <img class="d-block w-100" src="https://media0.giphy.com/media/RlO1rMI845fS0nUHYT/giphy.gif" width="0" height="900"  alt="Second slide"></a>
+      <a href="https://www.betterhealth.vic.gov.au/health/conditionsandtreatments/handwashing-why-its-important">  <img class="d-block w-100" src="https://media0.giphy.com/media/RlO1rMI845fS0nUHYT/giphy.gif" width="0" height="900"  alt="Second slide"></a>
       <div class="carousel-caption d-none d-md-block">
       <p>Wash Your Hands</p>
       </div>
     </div>
     <div class="carousel-item">
-      <a href="https://www.cdc.gov/coronavirus/2019-ncov/community/tribal/social-distancing.html#SocialDistancing">  <img class="d-block w-100" src="https://cdn.dribbble.com/users/1834059/screenshots/11038102/un_ph_full_1921dribble.gif" width="50" height="700" alt="Third slide"></a>
+      <a href="https://www.cdc.gov/respiratory-viruses/prevention/physical-distancing.html#:~:text=What%20to%20know,your%20chances%20of%20getting%20infected.">  <img class="d-block w-100" src="https://cdn.dribbble.com/users/1834059/screenshots/11038102/un_ph_full_1921dribble.gif" width="50" height="700" alt="Third slide"></a>
       <div class="carousel-caption d-none d-md-block">
       <p>Social Distancing</p>
       </div>
