--- a/check_list.html
+++ b/check_list.html
@@ -13,17 +13,17 @@
     <h1>SafeHealth</h1>
     <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand" href="#">
-        <a href="home.html">  <img src="https://cdn1.iconfinder.com/data/icons/hands-15/512/Untitled-222-512.png" width="250" height="200" class="d-inline-block align-top" alt="" loading=""></a>
+        <a href="index.html">  <img src="https://cdn1.iconfinder.com/data/icons/hands-15/512/Untitled-222-512.png" width="250" height="200" class="d-inline-block align-top" alt="" loading=""></a>
         <p></p>
       </a>
     </nav>
     <nav class="navbar navbar-dark bg-dark">
     <ul class="nav navbar-nav">
-      <li><a href="home.html"><h6>Home Page</h6></a></li>
+      <li><a href="index.html"><h6>Home Page</h6></a></li>
     </ul>
     <ul class="nav navbar-nav">
       <li><a href="check_list.html"><h6>Check List!</h6></a></li>
-      <li><a href="location.html"><h6>Covid-19 Tracker!</h6></a></li>
+      <li><a href="location.html"><h6>More Info!</h6></a></li>
       <li><a href="hand_wash.html"><h6>Hand Washing!</h6></a></li>
     </ul>
   </div>
