--- a/location.html
+++ b/location.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Covid-19 Tracker!</title>
+    <title>More Info!</title>
     <link rel="stylesheet" href="location.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -13,13 +13,13 @@
     <h1>SafeHealth</h1>
     <nav class="navbar navbar-light bg-light">
       <a class="navbar-brand" href="#">
-        <a href="home.html">  <img src="https://cdn1.iconfinder.com/data/icons/hands-15/512/Untitled-222-512.png" width="250" height="200" class="d-inline-block align-top" alt="" loading=""></a>
+        <a href="index.html">  <img src="https://cdn1.iconfinder.com/data/icons/hands-15/512/Untitled-222-512.png" width="250" height="200" class="d-inline-block align-top" alt="" loading=""></a>
         <p></p>
       </a>
     </nav>
     <nav class="navbar navbar-dark bg-dark">
     <ul class="nav navbar-nav">
-      <li><a href="home.html"><h6>Home Page</h6></a></li>
+      <li><a href="index.html"><h6>Home Page</h6></a></li>
     </ul>
     <ul class="nav navbar-nav">
       <li><a href="check_list.html"><h6>Check List!</h6></a></li>
